Fixed Blacklist Added Leader info to consensus so that it is fixed even the leaderinfo changes.